Added some items carrots and peppers to the list

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 	<body>
 		<ul>
 			<li>Flour</li>
-			<li>Soda</li>
 			<li>Butter</li>
 			<li>PANCAKE Mix</li>
+			<li>Peppers</li>
+			<li>Carrots</li>
 		<ul>
 	</body>
 </html>
